<resources>
    <string name="app_name">M_Expense</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_in_main_list">List Trip</string>
    <string name="menu_in_main_about">Information</string>
    <string name="menu_in_main_register">Add New Trip</string>

    <string name="error_empty_list">You have not added your trip yet!</string>
    <string name="error_not_found">Could not find the trip you were looking for!</string>
    <string name="error_no_info">Trip information does not exist or you have not added it</string>
    <string name="error_blank_name">Please fill name trip information.</string>
    <string name="error_blank_destination">Please fill destination trip information.</string>
    <string name="error_blank_description">Please fill description trip information.</string>
    <string name="error_blank_start_date">Please fill starting date trip information.</string>

    <string name="notification_empty_trip_list">There is no trip list.</string>
    <string name="notification_empty_request_list">There is no request trip list.</string>
    <string name="notification_create_success">Created new trip successfully.</string>
    <string name="notification_create_fail">Created new trip failed.</string>
    <string name="notification_delete_success">Deleted trip successfully.</string>
    <string name="notification_delete_fail">Deleted failed.</string>
    <string name="notification_update_success">Updated trip successfully.</string>
    <string name="notification_update_fail">Updated trip failed.</string>
    <string name="notification_backup_success">Backup database trip successfully.</string>
    <string name="notification_backup_fail">Backup database trip failed.</string>
    <string name="notification_reset_database_success">Reset database trip successfully.</string>
    <string name="notification_delete_confirm">Delete the trip you planned?</string>

    <string name="label_name">Trip Name: </string>
    <string name="label_destination">Destination Trip: </string>
    <string name="label_description">Description Trip: </string>
    <string name="label_start_date">Starting Date Trip: </string>
    <string name="label_date">Date: </string>
    <string name="label_time">Time: </string>
    <string name="label_owner">Owner</string>
    <string name="label_tenant">Tenant: </string>
    <string name="label_type">Type Trip</string>
    <string name="label_add_request">Add Request</string>
    <string name="label_register">New Trip</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_update">Update Trip</string>
    <string name="label_search">Search Trip</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_content">Content Trip:</string>
    <string name="label_setting">Setting</string>
    <string name="label_confirmation">Confirmation Trip</string>
    <string name="label_reset_database">Reset Database Trip</string>
    <string name="label_backup">Backup</string>
    <string name="label_backup_firestore">Firestore Backup Trip</string>

    <string-array name="request_type">
        <item><font fgcolor='#FFFFFF'> Travel </font></item>
        <item><font fgcolor='#FFFFFF'> Food </font></item>
        <item><font fgcolor='#FFFFFF'> Other </font></item>
    </string-array>
</resources>